[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.8",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]
